<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:background="@drawable/bg_gradient">

    <RelativeLayout android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:text=""/>

            <TextView android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/overviewContainer"
            android:layout_below="@+id/addressContainer"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLoc"
                android:layout_width="@dimen/_60sdp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_height="@dimen/_60sdp"></ImageView>


        </LinearLayout>

        <LinearLayout android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">


            <TextView android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:layout_gravity="center"
                android:text=""/>

            <TextView android:id="@+id/statusdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:text=""/>

            <TextView android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_50sdp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text=""/>



        </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView android:id="@+id/temp_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text=""/>

            <Space android:layout_width="@dimen/_30sdp"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/temp_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text=""/>
        </LinearLayout>
        <LinearLayout android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        app:tint="@color/white"
                        android:src="@drawable/sunrise" />

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/sunrise"/>

                    <TextView android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text=""/>

                </LinearLayout>
                <Space android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/sunset"
                        app:tint="@color/white"/>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/sunset"/>

                    <TextView android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text=""/>

                </LinearLayout>

                <Space android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF"/>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/wind"/>

                    <TextView android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content"
                android:layout_height="@dimen/_8sdp"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF"/>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/pressure"/>

                    <TextView android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text=""/>

                </LinearLayout>
                <Space android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF"/>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/humidity"/>

                    <TextView android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text=""/>

                </LinearLayout>
                <Space android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/lnrRefresh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="#3CF1EBF1">

                    <ImageView android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/refresh"
                        app:tint="#FFFFFF"/>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/refresh"/>

                    <TextView android:id="@+id/idRefresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@android:color/holo_green_light"
                        android:text="@string/click_here"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="Something went wrong"/>



</RelativeLayout>